minor changes in documentations
